--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header{
+  /* border: 1px solid green; */
+  text-align: center;
+  color: rgb(187, 185, 44);
+}
+.card-container{
+  /* border: 1px solid red; */
+  /* width: 100%; */
+  /* height: 100vh; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /* flex-direction: column; */
+}
